--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -21,7 +21,7 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/color_primary"
+            android:background="@color/background"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:titleTextColor="@color/white"
@@ -63,7 +63,6 @@
                             android:id="@+id/animationView"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:layout_below="@id/toolbar"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
                             android:layout_marginTop="10dp"
@@ -79,11 +78,10 @@
                             android:id="@+id/appName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
                             android:layout_gravity="center"
                             android:background="@drawable/background"
                             android:paddingBottom="5dp"
-                            android:text="তৎ সৎ"
+                            android:text="@string/om"
                             android:textColor="@color/black"
                             android:textSize="50sp"
                             android:textStyle="bold" />
@@ -93,51 +91,45 @@
                         android:id="@+id/layoutBottom"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_alignParentBottom="true"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingRight="10dp"
-                            android:paddingLeft="10dp"
-                            android:orientation="vertical"
-                            >
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:orientation="vertical">
+
+
 
                             <Button
                                 android:id="@+id/buttonNews"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="NEWS"
+                                android:text="@string/news"
                                 android:clickable="true"
                                 android:background="@drawable/red_button"
                                 android:textSize="21sp"
                                 android:textColor="@color/text_color"
                                 android:layout_margin="5dp"
-                                />
+                                android:focusable="true" />
                             <Button
                                 android:id="@+id/buttonSms"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Bani In SMS"
+                                android:text="@string/bani_in_sms"
                                 android:clickable="true"
                                 android:background="@drawable/red_button"
                                 android:textSize="21sp"
                                 android:textColor="@color/text_color"
                                 android:layout_margin="5dp"
-                                />
+                                android:focusable="true" />
 
                             <Button
                                 android:id="@+id/buttonMyTube"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="MyTube"
+                                android:text="@string/mytube"
                                 android:background="@drawable/red_button"
                                 android:textSize="21sp"
                                 android:textColor="@color/text_color"
                                 android:layout_margin="5dp"
                                 />
-                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -186,25 +178,25 @@
                             android:id="@+id/buttonGrid"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Bhagavad Gita"
+                            android:text="@string/bhagavad_gita"
                             android:background="@drawable/red_button"
                             android:clickable="true"
                             android:textSize="21sp"
                             android:textColor="@color/text_color"
                             android:layout_margin="5dp"
-                            />
+                            android:focusable="true" />
 
                         <Button
                             android:id="@+id/buttonMore"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="More"
+                            android:text="@string/more"
                             android:clickable="true"
                             android:background="@drawable/red_button"
                             android:textSize="21sp"
                             android:textColor="@color/text_color"
                             android:layout_margin="5dp"
-                            />
+                            android:focusable="true" />
 
                     </LinearLayout>
                     <LinearLayout
@@ -241,17 +233,18 @@
                 android:layout_above="@id/layBottomBanner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:singleLine="true"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:ellipsize="marquee"
                 android:fadingEdge="horizontal"
+                android:padding="2dp"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:textColor="@color/purple_500"
                 android:background="@color/color_primary"
-                android:text="সনাতন ধর্ম হিন্দু আলাপন আপনাকে স্বাগতম।"
+                android:text=""
                 android:visibility="gone"
                 />
             <!-- Banner ad  -->
@@ -261,7 +254,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingTop="5dp"
-                android:background="@drawable/edit_text_bg"
                 android:paddingBottom="2dp"
                 android:layout_alignParentBottom="true"
                 >
@@ -270,8 +262,6 @@
                     android:id="@+id/adView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_alignParentBottom="true"
                     ads:adSize="BANNER"
                     android:visibility="gone"
                     ads:adUnitId="@string/admob_BANNER_UNIT_ID">
