--- a/app/src/main/res/drawable/japa_button.xml
+++ b/app/src/main/res/drawable/japa_button.xml
@@ -4,7 +4,7 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/grey_font" />
+            <solid android:color="@color/shadow_color_top" />
             <corners android:radius="10dp" />
         </shape>
     </item>
@@ -20,7 +20,7 @@
             <corners android:radius="20dp" />
              <corners android:radius="13dip" />
              <stroke android:width="10dip"
-                 android:color="@color/white" />
+                 android:color="#FFFF00" />
          </shape>
     </item>
 
