--- a/app/src/main/res/layout/main_movie_activity.xml
+++ b/app/src/main/res/layout/main_movie_activity.xml
@@ -3,13 +3,14 @@
     android:id="@+id/rlMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_500"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_primary"
+        android:background="@color/background"
         />
 <ScrollView
     android:layout_width="match_parent"
@@ -20,24 +21,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <TextView
-            android:id="@+id/tvDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10-10-2022"
-            android:gravity="center"
-            android:textSize="19sp"
-            android:padding="5dp"
-            android:textStyle="bold"
 
-            />
         <TextView
             android:id="@+id/tvDate2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10-10-2022"
+            android:text="Sunday, January 1, 2023"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="19sp"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:textStyle="bold"
+
+            />
+
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="02/01/2023"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="19sp"
+            android:textColor="@color/white"
             android:padding="5dp"
             android:textStyle="bold"
 
@@ -46,12 +53,14 @@
 
         <TextClock
             android:id="@+id/textClock"
-            android:layout_width="90dp"
-            android:layout_height="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:format12Hour="hh:mm:ss"
-            android:gravity="center"
             android:text="10:10:10"
-            android:textSize="15sp"
+            android:textSize="19sp"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
             android:textStyle="bold" />
 
         <DatePicker
@@ -60,7 +69,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
-            android:visibility="gone"
+            android:animateLayoutChanges="true"
+            android:calendarTextColor="@color/purple_500"
+            android:visibility="visible"
             />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
