--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -9,8 +9,6 @@
     tools:openDrawer="start"
     tools:context=".Navigation">
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +33,6 @@
             android:orientation="vertical"
             >
 
-
             <ScrollView
                 android:id="@id/scrollView"
                 android:layout_above="@+id/marquee"
@@ -49,7 +46,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -94,7 +90,6 @@
                         android:paddingRight="10dp"
                         android:paddingLeft="10dp"
                         android:orientation="vertical">
-
 
 
                             <Button
@@ -168,12 +163,14 @@
                         </soup.neumorphism.NeumorphCardView>
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:orientation="vertical">
+
                         <Button
                             android:id="@+id/buttonGrid"
                             android:layout_width="match_parent"
@@ -185,6 +182,44 @@
                             android:textColor="@color/text_color"
                             android:layout_margin="5dp"
                             android:focusable="true" />
+                        <Button
+                            android:id="@+id/buttonQuiz"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/gita_quiz"
+                            android:background="@drawable/red_button"
+                            android:clickable="true"
+                            android:textSize="21sp"
+                            android:textColor="@color/text_color"
+                            android:layout_margin="5dp"
+                            android:focusable="true" />
+
+                        <Button
+                            android:id="@+id/buttonMoreQuiz"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/more_quiz"
+                            android:background="@drawable/red_button"
+                            android:clickable="true"
+                            android:textSize="21sp"
+                            android:textColor="@color/text_color"
+                            android:layout_margin="5dp"
+                            android:focusable="true" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="15dp"
+                        >
+
+                        <include layout="@layout/bangla_calender_activity"/>
+
+
 
                         <Button
                             android:id="@+id/buttonMore"
@@ -195,10 +230,15 @@
                             android:background="@drawable/red_button"
                             android:textSize="21sp"
                             android:textColor="@color/text_color"
-                            android:layout_margin="5dp"
+                            android:padding="5dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginEnd="15dp"
                             android:focusable="true" />
 
                     </LinearLayout>
+
+
+
                     <LinearLayout
                         android:id="@+id/layMenuButtons"
                         android:layout_width="match_parent"
@@ -253,13 +293,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="5dp"
-                android:paddingBottom="2dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="2dp"
                 android:layout_alignParentBottom="true"
                 >
                 <com.google.android.gms.ads.AdView
                     xmlns:ads="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/adView"
+                    android:id="@+id/mAdView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     ads:adSize="BANNER"
